--- a/manifest.json
+++ b/manifest.json
@@ -8,41 +8,29 @@
   "theme_color": "#0078d4",
   "icons": [
     {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-1024.png",
+      "src": "icons/apple-touch-icon.png",
       "sizes": "1024x1024",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/apple-touch-icon-180.png",
+      "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/apple-touch-icon-167.png",
+      "sizes": "167x167",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icons/icon-180.png",
-      "sizes": "180x180",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "icons/icon-167.png",
-      "sizes": "167x167",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "icons/icon-152.png",
+      "src": "icons/apple-touch-icon-152.png",
       "sizes": "152x152",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/icon-120.png",
+      "src": "icons/apple-touch-icon-120.png",
       "sizes": "120x120",
       "type": "image/png",
       "purpose": "any"
