--- a/manifest.json
+++ b/manifest.json
@@ -2,36 +2,20 @@
 {
   "name": "Arbeitszeit Rechner",
   "short_name": "Arbeitszeit",
-  "start_url": "./index.html",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0078d4",
   "icons": [
     {
-      "src": "icons/apple-touch-icon.png",
-      "sizes": "1024x1024",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/apple-touch-icon-180.png",
-      "sizes": "180x180",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/apple-touch-icon-167.png",
-      "sizes": "167x167",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icons/apple-touch-icon-152.png",
-      "sizes": "152x152",
+      "src": "/icons/icon-192.png",
+      "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/apple-touch-icon-120.png",
-      "sizes": "120x120",
+      "src": "/icons/icon-512.png",
+      "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     }
