--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,14 @@
   "theme_color": "#0078d4",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
-      "sizes": "192x192",
+      "src": "./icons/apple-touch-icon.png",
+      "sizes": "1024x1024",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-512.png",
-      "sizes": "512x512",
+      "src": "./icons/apple-touch-icon-180.png",
+      "sizes": "180x180",
       "type": "image/png",
       "purpose": "any"
     }
