Change start_url to './index.html'

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 {
   "name": "Arbeitszeit Rechner",
   "short_name": "Arbeitszeit",
-  "start_url": "/",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0078d4",
