--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "Arbeitszeit Rechner",
+  "name": "Arbeitszeit Rechner ZES",
   "short_name": "Arbeitszeit",
   "start_url": "./index.html",
   "display": "standalone",
